# HebbWatch

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: README.md
assets/ascii_frames/: frame_00001.txt  frame_00002.txt  frame_00009.txt  frame_00011.txt  frame_00012.txt  frame_00013.txt  frame_00014.txt  frame_00015.txt  frame_00017.txt  frame_00018.txt  frame_00023.txt  frame_00025.txt  frame_00026.txt  frame_00032.txt  frame_00034.txt  frame_00037.txt  frame_00038.txt  frame_00041.txt  frame_00051.txt  frame_00052.txt  frame_00057.txt  frame_00060.txt  frame_00061.txt  frame_00066.txt  frame_00067.txt  frame_00072.txt  frame_00073.txt  frame_00078.txt  frame_00080.txt  frame_00081.txt  frame_00084.txt  frame_00085.txt  frame_00086.txt  frame_00087.txt  frame_00089.txt  frame_00093.txt  frame_00094.txt  frame_00095.txt  frame_00096.txt  frame_00098.txt  (+15 more)
docs/: architecture.md  learning_rules.md  observability.md  plugin_system.md  rendering_engine.md
examples/: basic_hebbian.py  competitive_learning.py  live_terminal_demo.py  oscillatory_patterns.py  pytorch_hook_demo.py
hebbwatch/: __init__.py  cli.py  config.py  utils.py
hebbwatch/core/: learning_rules.py  metrics.py  network.py  simulation.py
hebbwatch/inputs/: correlated.py  generators.py  oscillatory.py  random.py  sparse.py
hebbwatch/integrations/: hooks.py  numpy_backend.py  (+1 more)
recordings/: sample_replay.hw
scripts/: benchmark_rendering.py  generate_gif.py  profile_simulation.py
tests/: test_inputs.py  test_learning.py  test_metrics.py  test_rendering.py  test_simulation.py
(+19 files in other folders)
