[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hebbwatch"
version = "0.1.0"
description = "Watch synaptic weights change in real time as a neural network learns."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mithil Shah" }]
keywords = ["hebbian-learning", "neuroscience", "machine-learning", "terminal", "visualization", "observability"]
dependencies = [
    "numpy>=1.23",
    "rich>=13.0",
    "typer>=0.9",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
torch = ["torch>=2.0"]

[project.scripts]
hebbwatch = "hebbwatch.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["hebbwatch*"]

[tool.setuptools.package-data]
hebbwatch = ["presets/*.yaml"]

[tool.ruff]
line-length = 100
